# DeepPaperResearcher

./: .gitignore
main/backend/: .env  .env.template  alembic.ini  pyproject.toml
main/backend/alembic/: env.py
main/backend/alembic/versions/: 07d35bff1e8f_sync_models_with_db.py  31e19415f3e2_init.py  555e29c4540c_merge_entities_add_agent_tables.py  7f00c08b09b7_add_db_comments.py  9cdd62d4f996_add_search_history_table.py  c6e40dc29ee7_add_default_collection_flag.py  c8a8ffc4772a_add_collection_models.py  ee0ffe641b9b_add_config_tables.py
main/backend/src/agent/base/: checkpointer.py  interrupt.py  persistence.py  state.py
main/backend/src/agent/common/: schema.py  tools.py
main/backend/src/agent/deep_research_agent/: __init__.py  agent.py  node.py  prompts.py  schema.py  tools.py  (+1 more)
main/backend/src/base/: config.py
main/backend/src/common/: db_types.py  logger.py  security.py  utils.py
main/backend/src/controller/: response.py
main/backend/src/worker/: tasks.py
main/backend/test/agent/: conftest.py  test_deep_research_agent.py  test_mindmap_agent.py  test_paper_chat_agent.py  test_persistence.py  test_search_agent.py  test_summary_agent.py
main/backend/test/src/: test_auth_router.py  test_chat_summary.py  test_collections_router.py  test_embedding_service.py  test_entity_check.py  test_job_service.py  test_paper_reading.py  test_paper_service.py  test_paper_service_arq.py  test_papers_router.py  test_reader_mindmap.py  test_reader_note.py  test_reader_v2.py  test_search_router.py  test_search_web_upload.py  test_user_settings.py  test_view_service.py
(+169 files in other folders)
