[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
# 依赖
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.14.0",
    "argon2-cffi>=25.1.0",
    "arq>=0.26.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "deepagents>=0.3.1",
    "email-validator>=2.1.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.3",
    "loguru>=0.7.3",
    "marker>=2.1.3",
    "marker-pdf>=1.5.5",
    "mypy>=1.19.1",
    "neo4j>=6.0.3",
    "onnxruntime>=1.23.2",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.3.2",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.21",
    "redis>=5.0.0,<6.0",
    "sqlmodel>=0.0.31",
    "sse-starlette>=3.1.2",
    "tokenizers>=0.22.2",
    "tzdata>=2025.3",
    "uvicorn>=0.40.0",
]

# 模块配置
# TODO:合理性待验证。
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]              
include = ["*"]    

[dependency-groups]
dev = [
    "alembic>=1.17.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = ["-ra"]
